--- a/src/Pages/login.css
+++ b/src/Pages/login.css
@@ -1,5 +1,6 @@
 body {
     color: white;
+    background-color: #f5f5f5;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
