--- a/src/Pages/profile_page.css
+++ b/src/Pages/profile_page.css
@@ -1,11 +1,11 @@
 .profile_page_outerdiv {
-    color: #000;
+    color: #000 !important;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     padding-top: 10vh;
-    padding-left: 15vh;
+    padding-left: 200px;
 }
 
 .profile_page_table {
@@ -14,20 +14,20 @@
 }
 
 .profile_page_table_col {
-    border: solid #2d2d2d 2px;
-    height: 40px;
+    border: solid #2d2d2d 2px transparent;
+    height: 70px;
     width: 30vw;
     text-align: left;
-    padding-left: 10px;
-    border-collapse: collapse;
+    padding-left: 5px;
+
 }
 
 
 .profile_page_table_col_img {
-    border: solid #2d2d2d 2px;
+    /* border: solid #2d2d2d 5;      */
     height: auto;
     width: 30vw;
-    padding: 15px;
+    padding: 5px;
     border-collapse: collapse;
 }
 
@@ -37,6 +37,8 @@
     box-shadow: 5px 5px 2px 2px #f5f5f5;
 
 }
+
+
 
 @media screen and (max-width:600px) {
     .profile_page_outerdiv {
