--- a/src/Components/NavBar/NavWeb.css
+++ b/src/Components/NavBar/NavWeb.css
@@ -3,7 +3,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 100%;
     background-color: #2d2d2d;
     display: flex;
     align-items: start;
