--- a/src/Pages/profile_page.css
+++ b/src/Pages/profile_page.css
@@ -6,11 +6,13 @@
     flex-direction: column;
     padding-top: 10vh;
     padding-left: 200px;
+    overflow: scroll;
 }
 
 .profile_page_table {
 
     border-collapse: collapse;
+    overflow: scroll;
 }
 
 .profile_page_table_col {
@@ -35,6 +37,8 @@
     background-color: white;
     padding: 50px;
     box-shadow: 5px 5px 2px 2px #f5f5f5;
+    overflow: scroll;
+
 
 }
 
