--- a/src/Pages/profile_page.css
+++ b/src/Pages/profile_page.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     padding-top: 10vh;
     padding-left: 200px;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 .profile_page_table {
